# bootc

./: .dockerignore  .packit.yaml  ADOPTERS.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Justfile  MAINTAINERS.md  Makefile  README.md  SECURITY.md  deny.toml
.github/: auto-review-config.yml
.github/scripts/: assign_reviewer.py
.github/workflows/: auto-review.yml  autovendor.yml  ci.yml  docs.yml  release.yml  scheduled-release.yml  udpate-generated.yml
cli/: Cargo.toml
contrib/packaging/: bootc.spec
contrib/scripts/: fedora-bootc-destructive-cleanup
crates/blockdev/: Cargo.toml
crates/blockdev/src/: blockdev.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/initramfs/: Cargo.toml  bootc-root-setup.service
crates/initramfs/dracut/: module-setup.sh
crates/initramfs/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/cfsctl/src/: main.rs
crates/lib/src/: bls_config.rs  bootc_kargs.rs  bootloader.rs  boundimage.rs  cfsctl.rs  cli.rs  composefs_consts.rs  deploy.rs  fsck.rs  image.rs  imgstorage.rs  install.rs  kernel.rs  kernel_cmdline.rs  lib.rs  lints.rs  lsm.rs  podman.rs  reboot.rs  rhsm.rs  spec.rs  status.rs  utils.rs
crates/lib/src/fixtures/: spec-booted-pinned.yaml  spec-only-booted.yaml  spec-ostree-remote.yaml  spec-ostree-to-bootc.yaml  spec-rfe-ostree-deployment.yaml  spec-staged-booted.yaml  spec-v1a1-orig.yaml  spec-v1a1.yaml
crates/lib/src/install/: aleph.rs  baseline.rs  completion.rs  config.rs  osbuild.rs
crates/lib/src/parsers/: bls_config.rs  grub_menuconfig.rs  mod.rs
crates/lib/src/store/: mod.rs
crates/mount/: Cargo.toml
crates/mount/src/: mount.rs
crates/ostree-ext/: Cargo.toml
crates/ostree-ext/src/: chunking.rs  container_utils.rs  fixture.rs  fsverity.rs  generic_decompress.rs  globals.rs  integrationtest.rs  lib.rs  ostree_prepareroot.rs  sysroot.rs
crates/ostree-ext/src/container/: deploy.rs  encapsulate.rs  store.rs  unencapsulate.rs
crates/ostree-ext/src/tar/: export.rs  write.rs
crates/ostree-ext/tests/it/: main.rs
crates/system-reinstall-bootc/: Cargo.toml
crates/system-reinstall-bootc/src/: main.rs  podman.rs  prompt.rs
crates/sysusers/: Cargo.toml
crates/tests-integration/: Cargo.toml
crates/tests-integration/src/: selinux.rs
crates/tmpfiles/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: command.rs  lib.rs  reexec.rs  result_ext.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: xtask.rs
docs/: _config.yml  book.toml
docs/src/: SUMMARY.md  bootc-images.md  bootc-in-container.md  bootc-install.md  bootloaders.md  experimental-bootc-image.md  experimental-progress-fd.md  filesystem-sysroot.md  filesystem.md  host-v1.schema.json  intro.md  logically-bound-images.md  relationship-particles.md  relationships.md
docs/src/building/: guidance.md  kernel-arguments.md  secrets.md  users-and-groups.md
docs/src/man/: bootc-container-lint.md  bootc-container.md  bootc-edit.md  bootc-install-ensure-completion.md  bootc-install-finalize.md  bootc-install-print-configuration.md  bootc-install-to-disk.md  bootc-install-to-existing-root.md  bootc-install-to-filesystem.md  bootc-install.md  bootc-rollback.md  bootc-status.md  bootc-switch.md  bootc-upgrade.md  bootc-usr-overlay.md  bootc.md
hack/: Containerfile  build.sh  provision-derived.sh
hack/lldb/: deploy.sh
lib/: Cargo.toml
lib/src/: boundimage.rs  cli.rs  deploy.rs  fsck.rs  imgstorage.rs  install.rs  lib.rs  lints.rs  lsm.rs  mount.rs  overlay.rs  progress_jsonl.rs  reboot.rs  spec.rs  status.rs
lib/src/fixtures/: spec-booted-pinned.yaml  spec-booted-usroverlay.yaml  spec-only-booted.yaml  spec-ostree-remote.yaml  spec-ostree-to-bootc.yaml  spec-staged-booted-usrunlock.yaml  spec-staged-booted.yaml  spec-staged-rollback.yaml  spec-v1a1-orig.yaml  spec-v1a1.yaml  spec-via-local-oci.yaml
lib/src/install/: baseline.rs  completion.rs
lib/src/store/: mod.rs  ostree_container.rs
mount/: Cargo.toml
mount/src/: mount.rs
ostree-ext/: Cargo.toml  README.md
ostree-ext/docs/: container-image-import.dot
ostree-ext/src/: chunking.rs  cli.rs  fixture.rs  fsverity.rs  isolation.rs  objectsource.rs
ostree-ext/src/container/: encapsulate.rs  store.rs  unencapsulate.rs  update_detachedmeta.rs
ostree-ext/src/tar/: export.rs  write.rs
ostree-ext/tests/it/: main.rs
src/: main.rs
system-reinstall-bootc/: Cargo.toml
system-reinstall-bootc/src/: btrfs.rs  lvm.rs  main.rs  podman.rs  prompt.rs  users.rs
systemd/: bootc-destructive-cleanup.service  bootc-fetch-apply-updates.service
sysusers/src/: lib.rs
tests-integration/: Cargo.toml  README.md
tests-integration/src/: hostpriv.rs  install.rs  system_reinstall.rs  tests-integration.rs
tests/booted/: test-logically-bound-install.nu
tests/booted/readonly/: 001-test-status.nu  020-test-relabel.nu
tests/container/: run
tests/container/reboot/: bootc-finish-test-reboot.service  bootc-test-reboot.service  run
tmt/: README.md
tmt/plans/: integration.fmf
tmt/tests/: bootc-install-provision.fmf  bootc-install-provision.sh  test-00-bootc-install.sh  test-01-readonly.fmf  test-20-local-upgrade.fmf  test-21-logically-bound-switch.fmf  test-22-logically-bound-install.fmf  test-23-install-outside-container.fmf  test-24-local-upgrade-reboot.fmf  test-25-soft-reboot.fmf
tmt/tests/booted/: test-image-pushpull-upgrade.nu  test-image-upgrade-reboot.nu  test-install-outside-container.nu  test-soft-reboot.nu
tmt/tests/booted/readonly/: 001-test-status.nu  002-test-cli.nu  030-test-composefs.nu  051-test-initramfs.nu
utils/: Cargo.toml
utils/src/: command.rs  iterators.rs  path.rs
xtask/src/: xtask.rs
