[package]
name = "cfsctl"
description = "Command-line utility for composefs"
default-run = "cfsctl"

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ['pre-6.15', 'oci']
oci = ['composefs-oci']
rhel9 = ['composefs/rhel9']
'pre-6.15' = ['composefs/pre-6.15']

[dependencies]
anyhow = { version = "1.0.87", default-features = false }
clap = { version = "4.0.1", default-features = false, features = ["std", "help", "usage", "derive"] }
composefs = { workspace = true }
composefs-boot = { workspace = true }
composefs-oci = { workspace = true, optional = true }
env_logger = { version = "0.11.0", default-features = false }
hex = { version = "0.4.0", default-features = false }
rustix = { version = "1.0.0", default-features = false, features = ["fs", "process"] }
tokio = { version = "1.24.2", default-features = false }

[lints]
workspace = true
