[package]
name = "bootc"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bootc-dev/bootc"
readme = "README.md"
publish = false
default-run = "bootc"

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux.  (In practice, it's unlikely there is a tier3-only Linux dependency)
platforms = ["*-unknown-linux-gnu"]

[dependencies]
anstream = { workspace = true }
anyhow = { workspace = true }
bootc-lib = { version = "1.0", path = "../lib" }
bootc-utils = { path = "../utils" }
tokio = { workspace = true, features = ["macros"] }
log = "0.4.21"
owo-colors = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
