[package]
description = "Internal implementation component of bootc; do not use"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bootc-internal-blockdev"
repository = "https://github.com/bootc-dev/bootc"
version = "0.0.0"

[dependencies]
anyhow = { workspace = true }
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "0.0.0" }
camino = { workspace = true, features = ["serde1"] }
fn-error-context = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }

[lib]
path = "src/blockdev.rs"