[package]
name = "bootc"
# This is a stub, the real version is from the lib crate
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bootc-dev/bootc"
publish = false
default-run = "bootc"

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux.  (In practice, it's unlikely there is a tier3-only Linux dependency)
platforms = ["*-unknown-linux-gnu"]

[dependencies]
anstream = { workspace = true }
anyhow = { workspace = true }
bootc-lib = { version = "1.6", path = "../lib" }
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "0.0.0" }
tokio = { workspace = true, features = ["macros"] }
log = "0.4.21"
owo-colors = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
