[package]
description = "bootc implementation"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bootc-lib"
repository = "https://github.com/bootc-dev/bootc"
# The intention is we'll follow semver here, even though this
# project isn't actually published as a crate.
version = "1.6.0"
# In general we try to keep this pinned to what's in the latest RHEL9.
# However right now, we bumped to 1.82 as that's what composefs-rs uses.
rust-version = "1.82.0"

include = ["/src", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
# Internal crates
bootc-blockdev = { package = "bootc-internal-blockdev", path = "../blockdev", version = "0.0.0" }
bootc-mount = { path = "../mount" }
bootc-sysusers = { path = "../sysusers" }
bootc-tmpfiles = { path = "../tmpfiles" }
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "0.0.0" }
ostree-ext = { path = "../ostree-ext", features = ["bootc"] }

# Workspace dependencies
anstream = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
canon-json = { workspace = true }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive","cargo"] }
clap_mangen = { workspace = true, optional = true }
composefs = { workspace = true }
composefs-boot = { workspace = true }
composefs-oci = { workspace = true }
fn-error-context = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true }
libc = { workspace = true }
openssl = { workspace = true }
regex = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std", "time", "process", "rt", "net"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
xshell = { workspace = true, optional = true }

# Crate-specific dependencies
anstyle = "1.0.6"
comfy-table = "7.1.1"
liboverdrop = "0.1.0"
libsystemd = "0.7"
linkme = "0.3"
nom = "8.0.0"
schemars = { version = "1.0.4", features = ["chrono04"] }
serde_ignored = "0.1.10"
serde_yaml = "0.9.34"
tini = "1.3.0"
uuid = { version = "1.8.0", features = ["v4"] }
uapi-version = "0.4.0"

[dev-dependencies]
similar-asserts = { workspace = true }
static_assertions = { workspace = true }

[features]
default = ["install-to-disk"]
# This feature enables `bootc install to-disk`, which is considered just a "demo"
# or reference installer; we expect most nontrivial use cases to be using
# `bootc install to-filesystem`.
install-to-disk = []
# Enable support for the composefs native backend
composefs-backend = []
# This featuares enables `bootc internals publish-rhsm-facts` to integrate with
# Red Hat Subscription Manager
rhsm = []
# Implementation detail of man page generation.
docgen = ["clap_mangen"]

[lints]
workspace = true
