[package]
description = "Internal mount code"
# Should never be published to crates.io
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bootc-mount"
repository = "https://github.com/bootc-dev/bootc"
version = "0.0.0"

[dependencies]
# Internal crates
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "0.0.0" }

# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
fn-error-context = { workspace = true }
libc = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }

[lib]
path = "src/mount.rs"
