[package]
name = "system-reinstall-bootc"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bootc-dev/bootc"
publish = false
# For now don't bump this above what is currently shipped in RHEL9.
rust-version = "1.75.0"

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux.  (In practice, it's unlikely there is a tier3-only Linux dependency)
platforms = ["*-unknown-linux-gnu"]

[dependencies]
# Internal crates
bootc-mount = { path = "../mount" }
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "0.0.0" }

# Workspace dependencies
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indoc = { workspace = true }
log = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
uzers = { workspace = true }

# Crate-specific dependencies
crossterm = "0.29.0"
dialoguer = "0.11.0"
openssh-keys = "0.6.4"
serde_yaml = "0.9.22"
which = "8.0.0"

[lints]
workspace = true
