[package]
name = "bootc-sysusers"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
fn-error-context = { workspace = true }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
hex = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "0.0.0" }
rustix = { workspace = true }
uzers = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
similar-asserts = { workspace = true }

[lints]
workspace = true
