[package]
name = "bootc-tmpfiles"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
camino = { workspace = true }
fn-error-context = { workspace = true }
cap-std-ext = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "0.0.0" }
rustix = { workspace = true }
uzers = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
indoc = { workspace = true }
similar-asserts = { workspace = true }

[lints]
workspace = true
