# See https://github.com/matklad/cargo-xtask
# This is an implementation detail of bootc
[package]
name = "xtask"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/xtask.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true, features = ["std"] }
fn-error-context = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
xshell = { workspace = true }

# Crate-specific dependencies
mandown = "1.1.0"
tar = "0.4"

[lints]
workspace = true
